--- a/timekeeping-app/package.json
+++ b/timekeeping-app/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.104",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "formik": "^2.4.6",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-scripts": "5.0.1",
