add copy to clipboard functionality

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://achavez5.github.io/timecard-app",
+  "homepage": "https://achavez5.github.io/TimesheetToTimecardEntry",
   "name": "timekeeping-app",
   "version": "0.1.0",
   "private": true,
